--- a/webapp/package.json
+++ b/webapp/package.json
@@ -36,6 +36,7 @@
     "react-router-config": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-test-renderer": "^16.8.6",
+    "react-to-print": "^2.5.1",
     "reactstrap": "^8.0.0",
     "redux-saga": "^1.1.3",
     "simple-line-icons": "^2.4.1"
